deployment/k8s.yaml
kind: Service
apiVersion: v1
metadata:
  name: order-api
  labels:
    app: order-api
spec:
  selector:
    app: order-api
  ports:
    - port: 3001
      name: http
  type: NodePort
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: order-api
spec:
  selector:
    matchLabels:
      app: order-api
  replicas: 1
  template:
    metadata:
      annotations: 
        sidecar.istio.io/inject: "true"      
      labels:
        app: order-api
        version: v1
    spec:
      containers:
      - name: order-api
        image: samuelpereiradesouza/order-api:4
        ports:
        - containerPort: 3001
      restartPolicy: Always
---
